--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram Feed with bootstrap</title>
+    <title>Instagram Feed With Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
               <div>
-                <i class="fa-solid fa-camera"></i>
+                <i class="fa-brands fa-instagram"></i>
                 <a class="navbar-brand" href="#">Instagram</a>
               </div>
 
@@ -27,7 +27,7 @@
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">Profile</a></li>
                     <li><a class="dropdown-item" href="#">Payments</a></li>
-                    <li><a class="dropdown-item" href="#">Close sesion</a></li>
+                    <li><a class="dropdown-item" href="#">Sign Out</a></li>
                   </ul>
                 </div>
               </div>
@@ -53,40 +53,40 @@
         <!-- PHOTOS - SE PONE COL -4 YA QUE HAY TRES FOTOS Y EL MÁXIMO ES 12 ( HAY QUE CUADRARLO)--> 
         <!-- FILA 1 -->
         <div class="d-flex justify-content-center">
-          <div class="row px-2 py-1">
-            <div class="col-4"><img src="https://picsum.photos/id/14/200/300" width="300px" height="300px"></div>
-            <div class="col-4"><img src="https://picsum.photos/id/144/200/300" width="300px" height="300px"></div>
-            <div class="col-4"><img src="https://picsum.photos/id/19/200/300" width="300px" height="300px"></div>
+          <div class="row px-2 py-2">
+            <div class="col-12 col-lg-4 text-center mb-3"><img src="https://picsum.photos/id/14/200/300" width="300px" height="300px"></div>
+            <div class="col-12 col-lg-4 text-center mb-3"><img src="https://picsum.photos/id/144/200/300" width="300px" height="300px"></div>
+            <div class="col-12 col-lg-4 text-center mb-3"><img src="https://picsum.photos/id/19/200/300" width="300px" height="300px"></div>
           </div>
         </div>
         <!-- FILA 1 -->
         
         <!-- FILA 2 -->
         <div class="d-flex justify-content-center">
-          <div class="row px-2 py-1">
-            <div class="col-4"><img src="https://picsum.photos/id/13/200/300" width="300px" height="300px"></div>
-            <div class="col-4"><img src="https://picsum.photos/id/134/200/300" width="300px" height="300px"></div>
-            <div class="col-4"><img src="https://picsum.photos/id/15/200/300" width="300px" height="300px"></div>
+          <div class="row px-2 py-2">
+            <div class="col-12 col-lg-4 text-center mb-3"><img src="https://picsum.photos/id/13/200/300" width="300px" height="300px"></div>
+            <div class="col-12 col-md-4 col-lg-4 text-center mb-3"><img src="https://picsum.photos/id/134/200/300" width="300px" height="300px"></div>
+            <div class="col-12 col-md-4 col-lg-4 text-center mb-3"><img src="https://picsum.photos/id/15/200/300" width="300px" height="300px"></div>
           </div>
         </div>
           <!-- FILA 2 -->
 
           <!-- FILA 3 -->
           <div class="d-flex justify-content-center">
-            <div class="row px-2 py-1">
-              <div class="col-4"><img src="https://picsum.photos/id/34/200/300" width="300px" height="300px"></div>
-              <div class="col-4"><img src="https://picsum.photos/id/244/200/300" width="300px" height="300px"></div>
-              <div class="col-4"><img src="https://picsum.photos/id/39/200/300" width="300px" height="300px"></div>
+            <div class="row px-2 py-2">
+              <div class="col-12 col-lg-4 text-center mb-3"><img src="https://picsum.photos/id/34/200/300" width="300px" height="300px"></div>
+              <div class="col-12 col-lg-4 text-center mb-3"><img src="https://picsum.photos/id/244/200/300" width="300px" height="300px"></div>
+              <div class="col-12 col-lg-4 text-center mb-3"><img src="https://picsum.photos/id/39/200/300" width="300px" height="300px"></div>
             </div>
           </div>
         <!-- FILA 3 -->
 
         <!-- FILA 4 -->
         <div class="d-flex justify-content-center">
-          <div class="row px-2 py-1">
-            <div class="col-4"><img src="https://picsum.photos/id/54/200/300" width="300px" height="300px"></div>
-            <div class="col-4"><img src="https://picsum.photos/id/164/200/300" width="300px" height="300px"></div>
-            <div class="col-4"><img src="https://picsum.photos/id/59/200/300" width="300px" height="300px"></div>
+          <div class="row px-2 py-2">
+            <div class="col-12 col-lg-4 text-center mb-3"><img src="https://picsum.photos/id/54/200/300" width="300px" height="300px"></div>
+            <div class="col-12 col-lg-4 text-center mb-3"><img src="https://picsum.photos/id/164/200/300" width="300px" height="300px"></div>
+            <div class="col-12 col-lg-4 text-center mb-3"><img src="https://picsum.photos/id/59/200/300" width="300px" height="300px"></div>
           </div>
         </div>
           <!-- FILA 4 -->
